--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 layout: default
 ---
 <body>
-<h1>Hello world!</h1>
-<p>Hosting with GitHub Pages (WIP)</p>
+<h1>Welcome!</h1>
+<p><a href="index.html">Home</a></p>
+<p><a href="www.nparisik.github.io/resume">Resume</a></p>
+<p><a href="www.github/nparisik">Github</a></p>
+<p><a href="www.linkedin.com/in/nicholas-parisik">LinkedIn</a></p>
 </body>
