--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 <body>
 <h1>Welcome!</h1>
 <p><a href="index.html">Home</a></p>
-<p><a href="www.nparisik.github.io/resume">Resume</a></p>
-<p><a href="www.github/nparisik">Github</a></p>
-<p><a href="www.linkedin.com/in/nicholas-parisik">LinkedIn</a></p>
+<p><a href="/resume.pdf">Resume</a></p>
+<p><a href="https://www.github/nparisik">Github</a></p>
+<p><a href="https://www.linkedin.com/in/nicholas-parisik">LinkedIn</a></p>
 </body>
