--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@ layout: default
 ---
 <body>
 <h1>Welcome!</h1>
-<p><a href="index.html">Home</a></p>
+<p><a href="/">Home</a></p>
 <p><a href="/resume.pdf">Resume</a></p>
-<p><a href="https://www.github/nparisik">Github</a></p>
+<p><a href="https://www.github.com/nparisik">Github</a></p>
 <p><a href="https://www.linkedin.com/in/nicholas-parisik">LinkedIn</a></p>
 </body>
