--- a/index.html
+++ b/index.html
@@ -7,4 +7,6 @@ layout: default
 <p><a href="/resume.pdf">Resume</a></p>
 <p><a href="https://www.github.com/nparisik">Github</a></p>
 <p><a href="https://www.linkedin.com/in/nicholas-parisik">LinkedIn</a></p>
+<h1></h1>
+<h1>First post coming soon!</h1>
 </body>
