--- a/index.html
+++ b/index.html
@@ -9,4 +9,5 @@ layout: default
 <p><a href="https://www.linkedin.com/in/nicholas-parisik">LinkedIn</a></p>
 <h1></h1>
 <h1>First post coming soon!</h1>
+<p>Will be related to introductory microservices info.</p>
 </body>
