Add RESTful Sys. post

--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@ layout: default
 <p><a href="https://www.github.com/nparisik">Github</a></p>
 <p><a href="https://www.linkedin.com/in/nicholas-parisik">LinkedIn</a></p>
 <h1></h1>
-<h1>First post coming soon!</h1>
-<p>Will be related to introductory microservices info.</p>
+<h1>RESTful Systems: Intro</h1>
+
+<h2>REST Architecture</h2>
+<p>-REST, representational state transfer, defines general constraints to follow while developing APIs, provides a large amount of flexibility, as it does not demand strict implementation rules</p>
+<p>-With REST arch., we can control data over the internet through HTTP commands</p>
+<p>-The main idea behind REST is to provide a uniform interoperability between applications on the internet, namely in a stateless manner</p>
+<p>-Benefits of REST arch include increased performance, scalability, extensibility, modifiability, and simplicity</p>
+
+<h2>REST Verbs</h2>
+<p>-REST Verbs are methods available for interacting with resources on the server. The four main verbs used in a well-designed RESTful application are GET, POST, UPDATE, and DELETE.</p>
+<p>-GET:
+-POST:
+-UPDATE:
+-DELETE:</p>
+<p>—There are other HTTP verbs as well, such as HEAD, OPTIONS, etc. </p>
+<p>-If a system implements these four methods for database management/interaction, it is said to be a CRUD system. It is important to note that CRUD relates to writing data into a database specifically, while REST is compatible with any object/resource, to and from.</p>
+
+<h2>Response Codes</h2>
+<p>-Communication between client and server in a RESTful system occurs primarily via HTTP response codes.</p>
+<p>-A client makes a request to the server, which is handled by the controller, mapped to an appropriate endpoint, some business logic and database interaction may occur, and a response code is sent back to the user to convey their request results</p>
+<p>-There are five categories for response codes. 1xx - Informational, 2xx - Success, 3xx - Redirection, 4xx - Client Error, and 5xx - Server Error</p>
+
 </body>
