Update post links

--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@ layout: default
 <h1></h1>
 
 <!-- Post Preview -->
-<h1>RESTful Systems: Intro</h1>
+<h1><a href="/restintro.html">RESTful Systems: Intro</a></h1>
 <h3>August 23, 2022</h3>
-<h2><a href="/restintro.html">REST Architecture</a></h2>
 <h2>Contents</h2>
 <ul>
 	<li>Architecture</il>
