--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: default
 <h1></h1>
 
 <!-- Post Preview -->
-<h1><a href="/_posts/restintro.html">RESTful Systems: Intro</a></h1>
+<h1><a href="/posts/restintro.html">RESTful Systems: Intro</a></h1>
 <h3>August 23, 2022</h3>
 <h2>Contents</h2>
 <ul>
