--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@ layout: default
 <h1></h1>
 
 <!-- Post Preview -->
+<div class="postlinks">
 <h1><a href="/posts/restintro.html">RESTful Systems: Intro</a></h1>
+</div>
 <h3>August 23, 2022</h3>
 <h2>Contents</h2>
 <ul>
