--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@ layout: default
 <h1></h1>
 
 <!-- Post Preview -->
-<div class="postlinks">
-<h1><a href="/posts/restintro.html">RESTful Systems: Intro</a></h1>
-</div>
+<h1 id="posts"><a href="/posts/restintro.html">RESTful Systems: Intro</a></h1>
 <h3>August 23, 2022</h3>
 <h2>Contents</h2>
 <ul>
