--- a/index.html
+++ b/index.html
@@ -22,4 +22,15 @@ layout: default
 </ul>
 <p><a href="/restintro.html">Read More</a></p>
 
+<!-- Post Preview -->
+<h1><a id="links" href="/posts/restindepth.html">REST in-depth</a></h1>
+<h3>August 23, 2022</h3>
+<h2>Contents</h2>
+    <ul>
+	<li>What does REST really mean?</il>
+	<li>6 REST Constraints</li>
+	<li>Beneficial properties achieved</li>
+</ul>
+<p><a href="/restindepth.html">Read More</a></p>
+
 </body>
