--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: default
 	<li>HTTP Verbs</li>
 	<li>Response Codes</li>
 </ul>
-<p><a href="/restintro.html">Read More</a></p>
+<p><a href="/posts/restintro.html">Read More</a></p>
 
 <!-- Post Preview -->
 <h1><a id="links" href="/posts/restindepth.html">REST in-depth</a></h1>
@@ -31,6 +31,6 @@ layout: default
 	<li>6 REST Constraints</li>
 	<li>Beneficial properties achieved</li>
 </ul>
-<p><a href="/restindepth.html">Read More</a></p>
+<p><a href="/posts/restindepth.html">Read More</a></p>
 
 </body>
